--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div id="root"></div>
-  <script src="./src/index.jsx"></script>
+  <script src="./index.tsx"></script>
 </body>
 
 </html>
